# fireSeqSearch

./: .deepsource.toml  .gitignore  CLAUDE.md  Containerfile  Dockerfile  LICENSE  PROGRESS.md  README.md  backup_pack_chrome_extension.sh  build_llama_server.sh  debug_obsidian.sh  debug_server.sh  dev_notes.md  docker-compose.yml  eval_retrieval.py  example.env  llm_plan.md  main.js  manifest.json  pack_chrome_extension.sh  pack_firefox_extension.sh  phase2_plan.md  phase3_summary.md  run.sh  run_server.sh  test_ask.py  test_endpoints.py
.circleci/: config.yml
.claude/agents/: ask-smoke.md  fsq-smoke.md  model-compare.md  obsidian-smoke.md  strip-audit.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  others.md
.github/workflows/: ci.yml  docker.yml  install.yml  live-llm.yml  llamafile-embed.yml  llm-backend.yml  quality.yml  rust.yml  windows.yml
docs/: README-pre-llm.md  dev_notes.md  examples.md  obsidian_example 2023-Feb-05.mkv  release_notes.md  release_notes_0.2_2024Sep.md  screen_record_20220514.mkv  server.md
fireSeqSearch_addon/: background.html  main.js  manifest.json  manifest_chrome.json  monkeyscript.user.js  options.html  options.js  pack.sh  run.sh  violentmonkeyscript.user.js  wordcloud_draw.js
fireSeqSearch_app/: Cargo.toml
fire_seq_search/: Cargo.toml  fire_seq_search.json
fire_seq_search/src/: main.rs
fire_seq_search_server/: Cargo.toml  README.md  debug_server.sh  debug_server_mac.sh  deny.toml  obsidian.sh  run_server.sh
fire_seq_search_server/src/: app_state.rs  config.rs  lib.rs  main.rs  semantic_query.rs
fire_seq_search_server/src/http_client/: ask.rs  endpoints.rs  mod.rs
fire_seq_search_server/src/indexer/: chunker.rs  mod.rs  pipeline.rs  store.rs  summarizer.rs
fire_seq_search_server/src/language_detect/: mod.rs
fire_seq_search_server/src/language_tools/: cn_stopwords.rs  mod.rs  search_term.rs  tokenizer.rs
fire_seq_search_server/src/llm_backend/: mod.rs  model_fetch.rs  process.rs  summary_shim.rs
fire_seq_search_server/src/load_notes/: mod.rs
fire_seq_search_server/src/local_llm/: example_llama_response.json  mod.rs
fire_seq_search_server/src/markdown_parser/: markdown_to_text.rs  mod.rs  pdf_parser.rs
fire_seq_search_server/src/note_intake/: logseq.rs  mod.rs  obsidian.rs
fire_seq_search_server/src/post_query/: app_uri.rs  highlighter.rs  hit_parsed.rs  logseq_uri.rs  mod.rs  obsidian_uri.rs
fire_seq_search_server/src/query_engine/: mod.rs  semantic_query.rs
fire_seq_search_server/src/word_frequency/: mod.rs
fire_seq_search_server/tests/: integration_test.rs  llamafile_embed_live.rs  llm_backend_live.rs  run_render.sh  test_markdown.rs  test_uri_encode.rs  unit_test.rs  unit_test_load_notes.rs  unit_test_post_query.rs  unit_test_render_block.rs  unit_test_tokenizer.rs
fire_seq_search_server/tests/resource/journals/: 2022_02_26.md  2022_08_30.md
fire_seq_search_server/tests/resource/logseq/: config.edn  pages-metadata.edn
fire_seq_search_server/tests/resource/pages/: International Language, Past, Present & Future by Walter John Clark.md  LATIN FOR BEGINNERS.md  Rust.md  Softmax.md  advance_query.md  advanced_query.md  blog_thunderbird_zh.md  cyrillic.md  feditips.md  fireSeqSearch___test___5.md  咖啡.md  孙子兵法.md
scripts/: build_llama_server.sh
tests/: .gitignore  astro_wiki_eval.json  chat_llamacpp.sh  chat_ollama.sh  eval_retrieval.py  obsidian_smoke.sh  run_logseq.sh  run_smoke.sh  test_ask.py  test_endpoints.py  vault_full.sh  vault_lite.sh
tests/astro-wiki-lite/: Blackbody Radiation.md  LICENSE  README
tests/astro-wiki-lite/E. ISM & Emission/: Compton Scattering.md
tests/astro-wiki-lite/trash/: Old Draft.md
