[package]
name = "fire_seq_search_server"
version = "0.2.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

tokio = { version = "1", features = ["full"] }

# Http Client
axum = "0.7.5"
serde_json = "1.0"

# Serde
#   https://serde.rs/derive.html
#   https://stackoverflow.com/a/49313680/1166518
serde = { version = "1.0", features = ["derive", "rc"] }
url = "2.3.1"

# QueryEngine
tantivy = "0.22"
tantivy-tokenizer-api = "0.3.0"
jieba-rs = { version = "0.7.0" }


log = "0.4.22"
env_logger = "0.11.5"

# Rust
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.5"
futures = "0.3"

urlencoding = "2.1.0"


# Language Processing
stopwords = "0.1.1"
stop-words = "0.7.2"

regex = "1"
lingua = { version = "1.4.0", default-features = false, features = ["chinese", "english"] }
shellexpand = "3.1"

#Highlight (Output)
html-escape = "0.2.13"

# Parsing
pulldown-cmark = { version = "0.9.2", default-features = false }
# Error
#at /rustc/897e37553bba8b42751c67658967889d11ecd120\library\core\src/option.rs:775:21
#4: pdf_extract::show_text
#at C:\Users\z2369li\.cargo\git\checkouts\pdf-extract-c67a6fa67c2d526c\0d8b9d9\src\lib.rs:1262:16
#pdf-extract = "0.6.4"
pdf-extract-temporary-mitigation-panic = "0.7.1"


sha256 = { version = "1.5.0", optional = true }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde_derive = { version = "1.0.209", optional = true}

[features]
#default = ["llm"]
llm = ["sha256", "reqwest", "serde_derive"]
