[package]
name = "fire_seq_search_server"
version = "1.0.1"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

tokio = { version = "1", features = ["full"] }

# Http Client
axum = "0.7.5"
serde_json = "1.0"

# Serde
#   https://serde.rs/derive.html
#   https://stackoverflow.com/a/49313680/1166518
serde = { version = "1.0", features = ["derive", "rc"] }
url = "2.3.1"


log = "0.4.22"
env_logger = "0.11.5"

# Rust
clap = { version = "4.0", features = ["derive"] }
lazy_static = "1.4.0"
rayon = "1.5"
futures = "0.3"
ctrlc = { version = "3.4", features = ["termination"] }
sysinfo = "0.34.2"
kill_tree = "0.2.4"
urlencoding = "2.1.0"


# Language Processing
stopwords = "0.1.1"
stop-words = "0.7.2"

regex = "1"
lingua = { version = "1.4.0", default-features = false, features = ["chinese", "english"] }
shellexpand = "3.1"
shell-words = "1.1"

# LLM backend (always on)
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_derive = "1.0.209"
thiserror = "1"

# Indexer (phase 2)
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1"
# SHA-256 for verifying the pinned auto-downloaded bge-m3 llamafile. (Note
# GitHub Releases publishes asset digests as SHA-256, hence sha2 here rather
# than reusing blake3.)
sha2 = "0.10"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
